--- a/package.json
+++ b/package.json
@@ -2,28 +2,24 @@
   "name": "hospitalrun-server",
   "main": "app.js",
   "version": "1.0.0-beta",
-  "description": "HospitalRun production server",
-  "homepage": "http://hospitalrun.io",
+  "description": "NHIP production server",
+  "homepage": "https://www.nhiproject.com",
   "scripts": {
     "start": "node app.js",
     "test": "snyk test && eslint *.js utils/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:HospitalRun/hospitalrun-server"
+    "url": "git+ssh:github.com:APU-CS/hospitalrun-server"
   },
-  "author": "John Kleinschmidt",
-  "contributors": [
-    "Joel Worrall",
-    "Joel Glovier"
-  ],
+  "author": "APU-CS",
   "license": "GPL-3.0",
   "dependencies": {
     "colors": "^1.1.2",
     "csv-parse": "2.0.2",
     "csv-stringify": "^2.0.0",
     "express": "^4.13.4",
-    "hospitalrun": "1.0.0-beta",
+    "hospitalrun": "https://nhiproject:KirklandPW17@github.com/APU-CS/hrnamibia-beta#dev",
     "hospitalrun-dblisteners": "1.0.1",
     "hospitalrun-server-routes": "1.0.0-beta",
     "moment": "^2.15.2",
